# pykarutils

./: .gitignore  README.md  setup.cfg  setyp.py
src/: __init__.py
src/pykarutils/: __init__.py
src/pykarutils/currency/: constants.py
src/pykarutils/rates/: __init__.py  base_provider.py  factory.py
src/pykarutils/rates/providers/: bnm.py  fixer.py
src/pykarutils/rates/structure/: result.py
