[metadata]
name = pykarutils
version = 0.1.0
author = Andrei Karpatiuk
author_email = karpatiuk@gmail.com
description = A small utility package for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karpatiuk/pykarutils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    # List your dependencies here

[options.packages.find]
where = src
